feat(OG): add open graph tags for social media links preview

--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
       href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&amp;family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&amp;display=swap"
       rel="stylesheet"
     />
+    <meta property="og:title" content="🌦️Ab va Hava" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/NoonPanirSabzi/weather-app/refs/heads/main/screenshot/opengraphimg.jpeg"
+    />
+    <meta
+      property="og:description"
+      content="Ab va Hava app made with React, TailwindCSS and TS | Amin"
+    />
+    <meta property="og:url" content="https://ab-va-hava.netlify.app/" />
   </head>
   <body>
     <div id="root"></div>
